fix mobile view by adding overflow on modal wrapper

--- a/src/stylesheets/modules/_recipe-detail.scss
+++ b/src/stylesheets/modules/_recipe-detail.scss
@@ -6,6 +6,7 @@
     align-items: center;
     background: white;
     width: 100%;
+    overflow-y: auto;
     @media screen and (min-width: $tablet) {
       margin: 0 auto;
       max-width: 90%;
